force-app/main/default/objects/Case_Assignment_Activity__c/Case_Assignment_Activity__c.object-meta.xml
<CustomObject>
    <description
  >Custom child record of Case Assignments. Allows users to log customized activity records to Case Assignments that Roll-Up into fields at both the Assignment, and Case level.</description>
    <label>Case Assignment Activity</label>
    <nameField>
        <label>Case Assignment Activity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Assignment Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>