force-app/main/default/objects/Case_Assignment_Activity__c/fields/Case_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignment__c</fullName>
    <description
  >The case assignment that this assignment activity is working towards completing.</description>
    <inlineHelpText
  >The case assignment that this assignment activity is working towards completing.</inlineHelpText>
    <label>Case Assignment</label>
    <referenceTo>Case_Assignment__c</referenceTo>
    <relationshipLabel>Assignment Activities</relationshipLabel>
    <relationshipName>Case_Assignment_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>