force-app/main/default/objects/Case_Assignment_Activity__c/fields/Completed_Items__c.field-meta.xml
<CustomField>
    <fullName>Completed_Items__c</fullName>
    <description
  >This is the number of items completed for this activity.</description>
    <inlineHelpText
  >This is the number of items completed for this activity.</inlineHelpText>
    <label>Completed Items</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>