force-app/main/default/objects/Case_Assignment_Activity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date this activity was completed.</description>
    <inlineHelpText>The date this activity was completed.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>